--- a/public/index.html
+++ b/public/index.html
@@ -30,19 +30,41 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      /* Show a loading screen before React loads */
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #1d2939;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        overflow: hidden;
+      }
+
+      #root {
+        display: none; /* Hide root content until React is loaded */
+      }
+
+      .loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+      }
+
+      .loader img {
+        width: 60px;
+        height: 60px;
+      }
+    </style>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <div class="loader">
+    <img src="%PUBLIC_URL%/loader_gif.gif" alt="Loading..." />
+  </div>
+  <div id="root"></div>
+</body>
 </html>
