--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <style>
+    <!-- <style>
       /* Show a loading screen before React loads */
       body {
         margin: 0;
@@ -59,12 +59,12 @@
       .loader img {
         width: 60px;
         height: 60px;
-      }
+      } -->
     </style>
   </head>
-  <div class="loader">
+  <!-- <div class="loader">
     <img src="%PUBLIC_URL%/loader_gif.gif" alt="Loading..." />
-  </div>
+  </div> -->
   <div id="root"></div>
 </body>
 </html>
