--- a/public/index.html
+++ b/public/index.html
@@ -30,41 +30,32 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <!-- <style>
-      /* Show a loading screen before React loads */
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: #1d2939;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        overflow: hidden;
-      }
-
-      #root {
-        display: none; /* Hide root content until React is loaded */
-      }
-
+    <style>
       .loader {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.7);
+        background-color: rgba(0, 0, 0, 0.8); /* Dark overlay */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
       }
 
-      .loader img {
-        width: 60px;
-        height: 60px;
-      } -->
+      /* Hide the page content initially */
+      #root {
+        display: none; /* Hide the React root container */
+      }
     </style>
   </head>
-  <!-- <div class="loader">
-    <img src="%PUBLIC_URL%/loader_gif.gif" alt="Loading..." />
-  </div> -->
-  <div id="root"></div>
+  <body>
+    <div class="loader">
+      <img src="%PUBLIC_URL%/loader_gif.gif" alt="Loading..." />
+    </div>
+
+    <div id="root"></div>
+  </body>
 </body>
 </html>
